parser.output
Grammar

    0 $accept: program $end

    1 program: procedures

    2 procedures: procedures procedure
    3           | procedure

    4 procedure: PROCEDURE IDENTIFIER '(' para_list ')' RETURN type '{' proc_body '}'

    5 para_list: %empty
    6          | para_list_

    7 para_list_: para_list_ ';' id_list ':' type
    8           | id_list ':' type

    9 id_list: id_list ',' IDENTIFIER
   10        | IDENTIFIER

   11 type: BOOLEAN
   12     | CHAR
   13     | CHARPTR
   14     | INTEGER
   15     | INTPTR

   16 proc_body: proc_list var_list statement_list RETURN expression ';'

   17 proc_list: %empty
   18          | proc_list procedure

   19 var_list: %empty
   20         | var_list VAR id_list ':' type ';'
   21         | var_list VAR id_list ':' STRING '[' INTEGER_LITERAL ']' ';'

   22 statement_list: %empty
   23               | statement_list statement

   24 statement: lhs ASSIGN expression ';'
   25          | lhs ASSIGN STRING_LITERAL ';'
   26          | lhs ASSIGN IDENTIFIER '(' expression_list ')' ';'
   27          | IF '(' expression ')' '{' nested_block '}'
   28          | IF '(' expression ')' '{' nested_block '}' ELSE '{' nested_block '}'
   29          | WHILE '(' expression ')' '{' nested_block '}'
   30          | '{' nested_block '}'

   31 nested_block: var_list statement_list

   32 expression_list: %empty
   33                | expression_list_

   34 expression_list_: expression_list_ ',' expression
   35                 | expression

   36 lhs: IDENTIFIER
   37    | IDENTIFIER '[' expression ']'
   38    | DEREF IDENTIFIER

   39 expression: NOT expression
   40           | DEREF expression
   41           | ADDR lhs
   42           | ADD expression
   43           | SUB expression
   44           | expression AND expression
   45           | expression OR expression
   46           | expression ADD expression
   47           | expression SUB expression
   48           | expression MUL expression
   49           | expression DIV expression
   50           | expression EQL expression
   51           | expression NOTEQL expression
   52           | expression SML expression
   53           | expression SMLEQL expression
   54           | expression LRG expression
   55           | expression LRGEQL expression
   56           | '(' expression ')'
   57           | IDENTIFIER '[' expression ']'
   58           | IDENTIFIER
   59           | INTEGER_LITERAL
   60           | CHAR_LITERAL
   61           | TF
   62           | '|' expression '|'
   63           | NULL_


Terminals, with rules where they appear

$end (0) 0
'(' (40) 4 26 27 28 29 56
')' (41) 4 26 27 28 29 56
',' (44) 9 34
':' (58) 7 8 20 21
';' (59) 7 16 20 21 24 25 26
'[' (91) 21 37 57
']' (93) 21 37 57
'{' (123) 4 27 28 29 30
'|' (124) 62
'}' (125) 4 27 28 29 30
error (256)
ASSIGN (258) 24 25 26
OR (259) 45
AND (260) 44
EQL (261) 50
NOTEQL (262) 51
SML (263) 52
SMLEQL (264) 53
LRG (265) 54
LRGEQL (266) 55
ADD (267) 42 46
SUB (268) 43 47
MUL (269) 48
DIV (270) 49
NOT (271) 39
DEREF (272) 38 40
ADDR (273) 41
BOOLEAN (274) 11
CHAR (275) 12
INTEGER (276) 14
INTPTR (277) 15
CHARPTR (278) 13
STRING (279) 21
IF (280) 27 28
ELSE (281) 28
WHILE (282) 29
VAR (283) 20 21
PROCEDURE (284) 4
RETURN (285) 4 16
NULL_ (286) 63
TF (287) 61
CHAR_LITERAL (288) 60
STRING_LITERAL (289) 25
IDENTIFIER (290) 4 9 10 26 36 37 38 57 58
INTEGER_LITERAL (291) 21 59


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
procedures (49)
    on left: 2 3, on right: 1 2
procedure (50)
    on left: 4, on right: 2 3 18
para_list (51)
    on left: 5 6, on right: 4
para_list_ (52)
    on left: 7 8, on right: 6 7
id_list (53)
    on left: 9 10, on right: 7 8 9 20 21
type (54)
    on left: 11 12 13 14 15, on right: 4 7 8 20
proc_body (55)
    on left: 16, on right: 4
proc_list (56)
    on left: 17 18, on right: 16 18
var_list (57)
    on left: 19 20 21, on right: 16 20 21 31
statement_list (58)
    on left: 22 23, on right: 16 23 31
statement (59)
    on left: 24 25 26 27 28 29 30, on right: 23
nested_block (60)
    on left: 31, on right: 27 28 29 30
expression_list (61)
    on left: 32 33, on right: 26
expression_list_ (62)
    on left: 34 35, on right: 33 34
lhs (63)
    on left: 36 37 38, on right: 24 25 26 41
expression (64)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58 59 60 61 62 63, on right: 16 24 27 28 29 34 35 37 39 40 42
    43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 62


State 0

    0 $accept: . program $end

    PROCEDURE  shift, and go to state 1

    program     go to state 2
    procedures  go to state 3
    procedure   go to state 4


State 1

    4 procedure: PROCEDURE . IDENTIFIER '(' para_list ')' RETURN type '{' proc_body '}'

    IDENTIFIER  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: procedures .
    2 procedures: procedures . procedure

    PROCEDURE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    procedure  go to state 7


State 4

    3 procedures: procedure .

    $default  reduce using rule 3 (procedures)


State 5

    4 procedure: PROCEDURE IDENTIFIER . '(' para_list ')' RETURN type '{' proc_body '}'

    '('  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    2 procedures: procedures procedure .

    $default  reduce using rule 2 (procedures)


State 8

    4 procedure: PROCEDURE IDENTIFIER '(' . para_list ')' RETURN type '{' proc_body '}'

    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 5 (para_list)

    para_list   go to state 10
    para_list_  go to state 11
    id_list     go to state 12


State 9

   10 id_list: IDENTIFIER .

    $default  reduce using rule 10 (id_list)


State 10

    4 procedure: PROCEDURE IDENTIFIER '(' para_list . ')' RETURN type '{' proc_body '}'

    ')'  shift, and go to state 13


State 11

    6 para_list: para_list_ .
    7 para_list_: para_list_ . ';' id_list ':' type

    ';'  shift, and go to state 14

    $default  reduce using rule 6 (para_list)


State 12

    8 para_list_: id_list . ':' type
    9 id_list: id_list . ',' IDENTIFIER

    ':'  shift, and go to state 15
    ','  shift, and go to state 16


State 13

    4 procedure: PROCEDURE IDENTIFIER '(' para_list ')' . RETURN type '{' proc_body '}'

    RETURN  shift, and go to state 17


State 14

    7 para_list_: para_list_ ';' . id_list ':' type

    IDENTIFIER  shift, and go to state 9

    id_list  go to state 18


State 15

    8 para_list_: id_list ':' . type

    BOOLEAN  shift, and go to state 19
    CHAR     shift, and go to state 20
    INTEGER  shift, and go to state 21
    INTPTR   shift, and go to state 22
    CHARPTR  shift, and go to state 23

    type  go to state 24


State 16

    9 id_list: id_list ',' . IDENTIFIER

    IDENTIFIER  shift, and go to state 25


State 17

    4 procedure: PROCEDURE IDENTIFIER '(' para_list ')' RETURN . type '{' proc_body '}'

    BOOLEAN  shift, and go to state 19
    CHAR     shift, and go to state 20
    INTEGER  shift, and go to state 21
    INTPTR   shift, and go to state 22
    CHARPTR  shift, and go to state 23

    type  go to state 26


State 18

    7 para_list_: para_list_ ';' id_list . ':' type
    9 id_list: id_list . ',' IDENTIFIER

    ':'  shift, and go to state 27
    ','  shift, and go to state 16


State 19

   11 type: BOOLEAN .

    $default  reduce using rule 11 (type)


State 20

   12 type: CHAR .

    $default  reduce using rule 12 (type)


State 21

   14 type: INTEGER .

    $default  reduce using rule 14 (type)


State 22

   15 type: INTPTR .

    $default  reduce using rule 15 (type)


State 23

   13 type: CHARPTR .

    $default  reduce using rule 13 (type)


State 24

    8 para_list_: id_list ':' type .

    $default  reduce using rule 8 (para_list_)


State 25

    9 id_list: id_list ',' IDENTIFIER .

    $default  reduce using rule 9 (id_list)


State 26

    4 procedure: PROCEDURE IDENTIFIER '(' para_list ')' RETURN type . '{' proc_body '}'

    '{'  shift, and go to state 28


State 27

    7 para_list_: para_list_ ';' id_list ':' . type

    BOOLEAN  shift, and go to state 19
    CHAR     shift, and go to state 20
    INTEGER  shift, and go to state 21
    INTPTR   shift, and go to state 22
    CHARPTR  shift, and go to state 23

    type  go to state 29


State 28

    4 procedure: PROCEDURE IDENTIFIER '(' para_list ')' RETURN type '{' . proc_body '}'

    $default  reduce using rule 17 (proc_list)

    proc_body  go to state 30
    proc_list  go to state 31


State 29

    7 para_list_: para_list_ ';' id_list ':' type .

    $default  reduce using rule 7 (para_list_)


State 30

    4 procedure: PROCEDURE IDENTIFIER '(' para_list ')' RETURN type '{' proc_body . '}'

    '}'  shift, and go to state 32


State 31

   16 proc_body: proc_list . var_list statement_list RETURN expression ';'
   18 proc_list: proc_list . procedure

    PROCEDURE  shift, and go to state 1

    $default  reduce using rule 19 (var_list)

    procedure  go to state 33
    var_list   go to state 34


State 32

    4 procedure: PROCEDURE IDENTIFIER '(' para_list ')' RETURN type '{' proc_body '}' .

    $default  reduce using rule 4 (procedure)


State 33

   18 proc_list: proc_list procedure .

    $default  reduce using rule 18 (proc_list)


State 34

   16 proc_body: proc_list var_list . statement_list RETURN expression ';'
   20 var_list: var_list . VAR id_list ':' type ';'
   21         | var_list . VAR id_list ':' STRING '[' INTEGER_LITERAL ']' ';'

    VAR  shift, and go to state 35

    $default  reduce using rule 22 (statement_list)

    statement_list  go to state 36


State 35

   20 var_list: var_list VAR . id_list ':' type ';'
   21         | var_list VAR . id_list ':' STRING '[' INTEGER_LITERAL ']' ';'

    IDENTIFIER  shift, and go to state 9

    id_list  go to state 37


State 36

   16 proc_body: proc_list var_list statement_list . RETURN expression ';'
   23 statement_list: statement_list . statement

    DEREF       shift, and go to state 38
    IF          shift, and go to state 39
    WHILE       shift, and go to state 40
    RETURN      shift, and go to state 41
    IDENTIFIER  shift, and go to state 42
    '{'         shift, and go to state 43

    statement  go to state 44
    lhs        go to state 45


State 37

    9 id_list: id_list . ',' IDENTIFIER
   20 var_list: var_list VAR id_list . ':' type ';'
   21         | var_list VAR id_list . ':' STRING '[' INTEGER_LITERAL ']' ';'

    ':'  shift, and go to state 46
    ','  shift, and go to state 16


State 38

   38 lhs: DEREF . IDENTIFIER

    IDENTIFIER  shift, and go to state 47


State 39

   27 statement: IF . '(' expression ')' '{' nested_block '}'
   28          | IF . '(' expression ')' '{' nested_block '}' ELSE '{' nested_block '}'

    '('  shift, and go to state 48


State 40

   29 statement: WHILE . '(' expression ')' '{' nested_block '}'

    '('  shift, and go to state 49


State 41

   16 proc_body: proc_list var_list statement_list RETURN . expression ';'

    ADD              shift, and go to state 50
    SUB              shift, and go to state 51
    NOT              shift, and go to state 52
    DEREF            shift, and go to state 53
    ADDR             shift, and go to state 54
    NULL_            shift, and go to state 55
    TF               shift, and go to state 56
    CHAR_LITERAL     shift, and go to state 57
    IDENTIFIER       shift, and go to state 58
    INTEGER_LITERAL  shift, and go to state 59
    '('              shift, and go to state 60
    '|'              shift, and go to state 61

    expression  go to state 62


State 42

   36 lhs: IDENTIFIER .
   37    | IDENTIFIER . '[' expression ']'

    '['  shift, and go to state 63

    $default  reduce using rule 36 (lhs)


State 43

   30 statement: '{' . nested_block '}'

    $default  reduce using rule 19 (var_list)

    var_list      go to state 64
    nested_block  go to state 65


State 44

   23 statement_list: statement_list statement .

    $default  reduce using rule 23 (statement_list)


State 45

   24 statement: lhs . ASSIGN expression ';'
   25          | lhs . ASSIGN STRING_LITERAL ';'
   26          | lhs . ASSIGN IDENTIFIER '(' expression_list ')' ';'

    ASSIGN  shift, and go to state 66


State 46

   20 var_list: var_list VAR id_list ':' . type ';'
   21         | var_list VAR id_list ':' . STRING '[' INTEGER_LITERAL ']' ';'

    BOOLEAN  shift, and go to state 19
    CHAR     shift, and go to state 20
    INTEGER  shift, and go to state 21
    INTPTR   shift, and go to state 22
    CHARPTR  shift, and go to state 23
    STRING   shift, and go to state 67

    type  go to state 68


State 47

   38 lhs: DEREF IDENTIFIER .

    $default  reduce using rule 38 (lhs)


State 48

   27 statement: IF '(' . expression ')' '{' nested_block '}'
   28          | IF '(' . expression ')' '{' nested_block '}' ELSE '{' nested_block '}'

    ADD              shift, and go to state 50
    SUB              shift, and go to state 51
    NOT              shift, and go to state 52
    DEREF            shift, and go to state 53
    ADDR             shift, and go to state 54
    NULL_            shift, and go to state 55
    TF               shift, and go to state 56
    CHAR_LITERAL     shift, and go to state 57
    IDENTIFIER       shift, and go to state 58
    INTEGER_LITERAL  shift, and go to state 59
    '('              shift, and go to state 60
    '|'              shift, and go to state 61

    expression  go to state 69


State 49

   29 statement: WHILE '(' . expression ')' '{' nested_block '}'

    ADD              shift, and go to state 50
    SUB              shift, and go to state 51
    NOT              shift, and go to state 52
    DEREF            shift, and go to state 53
    ADDR             shift, and go to state 54
    NULL_            shift, and go to state 55
    TF               shift, and go to state 56
    CHAR_LITERAL     shift, and go to state 57
    IDENTIFIER       shift, and go to state 58
    INTEGER_LITERAL  shift, and go to state 59
    '('              shift, and go to state 60
    '|'              shift, and go to state 61

    expression  go to state 70


State 50

   42 expression: ADD . expression

    ADD              shift, and go to state 50
    SUB              shift, and go to state 51
    NOT              shift, and go to state 52
    DEREF            shift, and go to state 53
    ADDR             shift, and go to state 54
    NULL_            shift, and go to state 55
    TF               shift, and go to state 56
    CHAR_LITERAL     shift, and go to state 57
    IDENTIFIER       shift, and go to state 58
    INTEGER_LITERAL  shift, and go to state 59
    '('              shift, and go to state 60
    '|'              shift, and go to state 61

    expression  go to state 71


State 51

   43 expression: SUB . expression

    ADD              shift, and go to state 50
    SUB              shift, and go to state 51
    NOT              shift, and go to state 52
    DEREF            shift, and go to state 53
    ADDR             shift, and go to state 54
    NULL_            shift, and go to state 55
    TF               shift, and go to state 56
    CHAR_LITERAL     shift, and go to state 57
    IDENTIFIER       shift, and go to state 58
    INTEGER_LITERAL  shift, and go to state 59
    '('              shift, and go to state 60
    '|'              shift, and go to state 61

    expression  go to state 72


State 52

   39 expression: NOT . expression

    ADD              shift, and go to state 50
    SUB              shift, and go to state 51
    NOT              shift, and go to state 52
    DEREF            shift, and go to state 53
    ADDR             shift, and go to state 54
    NULL_            shift, and go to state 55
    TF               shift, and go to state 56
    CHAR_LITERAL     shift, and go to state 57
    IDENTIFIER       shift, and go to state 58
    INTEGER_LITERAL  shift, and go to state 59
    '('              shift, and go to state 60
    '|'              shift, and go to state 61

    expression  go to state 73


State 53

   40 expression: DEREF . expression

    ADD              shift, and go to state 50
    SUB              shift, and go to state 51
    NOT              shift, and go to state 52
    DEREF            shift, and go to state 53
    ADDR             shift, and go to state 54
    NULL_            shift, and go to state 55
    TF               shift, and go to state 56
    CHAR_LITERAL     shift, and go to state 57
    IDENTIFIER       shift, and go to state 58
    INTEGER_LITERAL  shift, and go to state 59
    '('              shift, and go to state 60
    '|'              shift, and go to state 61

    expression  go to state 74


State 54

   41 expression: ADDR . lhs

    DEREF       shift, and go to state 38
    IDENTIFIER  shift, and go to state 42

    lhs  go to state 75


State 55

   63 expression: NULL_ .

    $default  reduce using rule 63 (expression)


State 56

   61 expression: TF .

    $default  reduce using rule 61 (expression)


State 57

   60 expression: CHAR_LITERAL .

    $default  reduce using rule 60 (expression)


State 58

   57 expression: IDENTIFIER . '[' expression ']'
   58           | IDENTIFIER .

    '['  shift, and go to state 76

    $default  reduce using rule 58 (expression)


State 59

   59 expression: INTEGER_LITERAL .

    $default  reduce using rule 59 (expression)


State 60

   56 expression: '(' . expression ')'

    ADD              shift, and go to state 50
    SUB              shift, and go to state 51
    NOT              shift, and go to state 52
    DEREF            shift, and go to state 53
    ADDR             shift, and go to state 54
    NULL_            shift, and go to state 55
    TF               shift, and go to state 56
    CHAR_LITERAL     shift, and go to state 57
    IDENTIFIER       shift, and go to state 58
    INTEGER_LITERAL  shift, and go to state 59
    '('              shift, and go to state 60
    '|'              shift, and go to state 61

    expression  go to state 77


State 61

   62 expression: '|' . expression '|'

    ADD              shift, and go to state 50
    SUB              shift, and go to state 51
    NOT              shift, and go to state 52
    DEREF            shift, and go to state 53
    ADDR             shift, and go to state 54
    NULL_            shift, and go to state 55
    TF               shift, and go to state 56
    CHAR_LITERAL     shift, and go to state 57
    IDENTIFIER       shift, and go to state 58
    INTEGER_LITERAL  shift, and go to state 59
    '('              shift, and go to state 60
    '|'              shift, and go to state 61

    expression  go to state 78


State 62

   16 proc_body: proc_list var_list statement_list RETURN expression . ';'
   44 expression: expression . AND expression
   45           | expression . OR expression
   46           | expression . ADD expression
   47           | expression . SUB expression
   48           | expression . MUL expression
   49           | expression . DIV expression
   50           | expression . EQL expression
   51           | expression . NOTEQL expression
   52           | expression . SML expression
   53           | expression . SMLEQL expression
   54           | expression . LRG expression
   55           | expression . LRGEQL expression

    OR      shift, and go to state 79
    AND     shift, and go to state 80
    EQL     shift, and go to state 81
    NOTEQL  shift, and go to state 82
    SML     shift, and go to state 83
    SMLEQL  shift, and go to state 84
    LRG     shift, and go to state 85
    LRGEQL  shift, and go to state 86
    ADD     shift, and go to state 87
    SUB     shift, and go to state 88
    MUL     shift, and go to state 89
    DIV     shift, and go to state 90
    ';'     shift, and go to state 91


State 63

   37 lhs: IDENTIFIER '[' . expression ']'

    ADD              shift, and go to state 50
    SUB              shift, and go to state 51
    NOT              shift, and go to state 52
    DEREF            shift, and go to state 53
    ADDR             shift, and go to state 54
    NULL_            shift, and go to state 55
    TF               shift, and go to state 56
    CHAR_LITERAL     shift, and go to state 57
    IDENTIFIER       shift, and go to state 58
    INTEGER_LITERAL  shift, and go to state 59
    '('              shift, and go to state 60
    '|'              shift, and go to state 61

    expression  go to state 92


State 64

   20 var_list: var_list . VAR id_list ':' type ';'
   21         | var_list . VAR id_list ':' STRING '[' INTEGER_LITERAL ']' ';'
   31 nested_block: var_list . statement_list

    VAR  shift, and go to state 35

    $default  reduce using rule 22 (statement_list)

    statement_list  go to state 93


State 65

   30 statement: '{' nested_block . '}'

    '}'  shift, and go to state 94


State 66

   24 statement: lhs ASSIGN . expression ';'
   25          | lhs ASSIGN . STRING_LITERAL ';'
   26          | lhs ASSIGN . IDENTIFIER '(' expression_list ')' ';'

    ADD              shift, and go to state 50
    SUB              shift, and go to state 51
    NOT              shift, and go to state 52
    DEREF            shift, and go to state 53
    ADDR             shift, and go to state 54
    NULL_            shift, and go to state 55
    TF               shift, and go to state 56
    CHAR_LITERAL     shift, and go to state 57
    STRING_LITERAL   shift, and go to state 95
    IDENTIFIER       shift, and go to state 96
    INTEGER_LITERAL  shift, and go to state 59
    '('              shift, and go to state 60
    '|'              shift, and go to state 61

    expression  go to state 97


State 67

   21 var_list: var_list VAR id_list ':' STRING . '[' INTEGER_LITERAL ']' ';'

    '['  shift, and go to state 98


State 68

   20 var_list: var_list VAR id_list ':' type . ';'

    ';'  shift, and go to state 99


State 69

   27 statement: IF '(' expression . ')' '{' nested_block '}'
   28          | IF '(' expression . ')' '{' nested_block '}' ELSE '{' nested_block '}'
   44 expression: expression . AND expression
   45           | expression . OR expression
   46           | expression . ADD expression
   47           | expression . SUB expression
   48           | expression . MUL expression
   49           | expression . DIV expression
   50           | expression . EQL expression
   51           | expression . NOTEQL expression
   52           | expression . SML expression
   53           | expression . SMLEQL expression
   54           | expression . LRG expression
   55           | expression . LRGEQL expression

    OR      shift, and go to state 79
    AND     shift, and go to state 80
    EQL     shift, and go to state 81
    NOTEQL  shift, and go to state 82
    SML     shift, and go to state 83
    SMLEQL  shift, and go to state 84
    LRG     shift, and go to state 85
    LRGEQL  shift, and go to state 86
    ADD     shift, and go to state 87
    SUB     shift, and go to state 88
    MUL     shift, and go to state 89
    DIV     shift, and go to state 90
    ')'     shift, and go to state 100


State 70

   29 statement: WHILE '(' expression . ')' '{' nested_block '}'
   44 expression: expression . AND expression
   45           | expression . OR expression
   46           | expression . ADD expression
   47           | expression . SUB expression
   48           | expression . MUL expression
   49           | expression . DIV expression
   50           | expression . EQL expression
   51           | expression . NOTEQL expression
   52           | expression . SML expression
   53           | expression . SMLEQL expression
   54           | expression . LRG expression
   55           | expression . LRGEQL expression

    OR      shift, and go to state 79
    AND     shift, and go to state 80
    EQL     shift, and go to state 81
    NOTEQL  shift, and go to state 82
    SML     shift, and go to state 83
    SMLEQL  shift, and go to state 84
    LRG     shift, and go to state 85
    LRGEQL  shift, and go to state 86
    ADD     shift, and go to state 87
    SUB     shift, and go to state 88
    MUL     shift, and go to state 89
    DIV     shift, and go to state 90
    ')'     shift, and go to state 101


State 71

   42 expression: ADD expression .
   44           | expression . AND expression
   45           | expression . OR expression
   46           | expression . ADD expression
   47           | expression . SUB expression
   48           | expression . MUL expression
   49           | expression . DIV expression
   50           | expression . EQL expression
   51           | expression . NOTEQL expression
   52           | expression . SML expression
   53           | expression . SMLEQL expression
   54           | expression . LRG expression
   55           | expression . LRGEQL expression

    $default  reduce using rule 42 (expression)


State 72

   43 expression: SUB expression .
   44           | expression . AND expression
   45           | expression . OR expression
   46           | expression . ADD expression
   47           | expression . SUB expression
   48           | expression . MUL expression
   49           | expression . DIV expression
   50           | expression . EQL expression
   51           | expression . NOTEQL expression
   52           | expression . SML expression
   53           | expression . SMLEQL expression
   54           | expression . LRG expression
   55           | expression . LRGEQL expression

    $default  reduce using rule 43 (expression)


State 73

   39 expression: NOT expression .
   44           | expression . AND expression
   45           | expression . OR expression
   46           | expression . ADD expression
   47           | expression . SUB expression
   48           | expression . MUL expression
   49           | expression . DIV expression
   50           | expression . EQL expression
   51           | expression . NOTEQL expression
   52           | expression . SML expression
   53           | expression . SMLEQL expression
   54           | expression . LRG expression
   55           | expression . LRGEQL expression

    $default  reduce using rule 39 (expression)


State 74
